# study

./: a.out  long_double.txt  ls2  mthread.cpp  search.cpp  system.cpp  try_04d.cpp  try_FILE.cpp  try_and.cpp  try_array_input.cpp  try_atan2.cpp  try_c--.cpp  try_cin.cpp  try_ctime.cpp  try_decompose.cpp  try_deque.cpp  try_dir_create.cpp  try_directory.cpp  try_eigen.cpp  try_eigen_map.cpp  try_erase.cpp  try_inf.cpp  try_map_erase.cpp  try_n_element.cpp  try_patch.cpp  try_platform.cpp  try_point_to_plane.cpp  try_popen.cpp  try_protected.cpp  try_round.cpp  try_sort_index.cpp  try_substr.cpp  try_sum_xy.cpp  try_time_str_2_double.cpp  try_typedef.c  try_utmp.cpp  try_vec_bool.cpp  try_virtual.cpp  try_vritual.cpp
PlaneSegmentation/: CMakeLists.txt
PlaneSegmentation/source/: CMakeLists.txt  rigion_growing.cpp
PythonS/: 1.txt  DIP5.4.py  Lines.txt  Script1.py  script1.py  strmatch.py
algorithms/client_fusion/src/clients/: CMakeLists.txt  client_interface.cpp  client_interface.h  client_main.cpp  global_func.cpp  global_func.h  mopenni2.cpp  mopenni2.h  odo_client.cpp  odo_client.h  sick_client.cpp  sick_client.h  socket_client.cpp  socket_client.h  xtion_client.cpp  xtion_client.h  xtion_sick_odo_client.cpp  xtion_sick_odo_client.h
boost/: CMakeLists.txt  README
c++_template/: remove_if.cpp  test.cpp
ceres/: CMakeLists.txt
ceres/src/: projection_quat.cpp  projection_quat.h  testAuto.cpp  test_auto_diff.cpp  test_jin.cpp  test_projection.cpp  utility.h
cmake/: CMakeLists.txt  function_argument.cmake  macro.cmake  opencv_test.cmake
cmake/src/: opencv_test.cpp
eigen/: eigen_in_out_file.cpp  eigen_matrix.cpp  left-right.txt  out_in_file.txt  rotation_test.cpp  test_point_plane_dis.cpp  test_quaternion.cpp  test_stereo_err.cpp  try_eigen.cpp  try_stereo_correction.cpp  try_triangulate.cpp
extract_pcds/: .CMakeLists.txt.swp  CMakeLists.txt
extract_pcds/src/: extract_pcds.cpp  extract_pcds.h  main.cpp  main2.cpp  pcl_dec.cpp  pcl_dec.h
friends/: Traversal.cpp
gicp/gicp/src/: .CMakeLists.txt.swp  .PGicp.cpp.swp  .PGicp.h.swp  .gicp.cpp.swp  .globaldef.cpp.swp  .globaldef.h.swp  .main.cpp.swp  CMakeLists.txt  KDTWrapper.cpp  KDTWrapper.h  PGicp.cpp  PGicp.h  dgc.cpp  gicp.cpp  gicp.h  globaldef.cpp  globaldef.h  main.cpp  test_flann.cpp  test_flann_ori.cpp  test_registration.cpp
gicp/gicp2/src/: CMakeLists.txt  PGicp.cpp  PGicp.h  RandomImpl.h  gicp.h  globaldef.cpp  globaldef.h  globaldef_back.cpp  globaldef_back.h  main.cpp  test_flann.cpp
gicp/gicpwrapper-fuerte/src/pbmap/: .CMakeLists.txt.swp  CMakeLists.txt  pbconfig.ini  test.cpp  test_pbmap.cpp
gicp/gicpwrapper-groovy/src/pbmap/: CMakeLists.txt  test_pbmap.cpp  test_sample.cpp  test_viz.cpp
gravity_pose/: gravity_pose.cpp
grid/: .try_grid.cpp.swp  try_grid.cpp
gtsam_test/: CMakeLists.txt
gtsam_test/src/: CMakeLists.txt  imuGPS_example.cpp  testImuFactor.cpp  testTrans.cpp
huffman2/: a.out  huffman_code.cpp  huffman_code_2.cpp  l2o_1000.dat_z
huffman_code/: a.out  bitChar.cpp  bitChar.h  core  d1_1000.bdat  d1_1000.bdat.mpc  l2o_1000.dat.mpc  main.cpp
matlab/: myfun.m  p204.m  p76.m  p92.m  poly2str.asv  poly2str.m  str2poly.asv  str2poly.m
metaprogram/: .5_6e.cpp.swp  .header.h.swp  2_1.cpp  2_3.cpp  3_3.cpp  4_1.cpp  5_6.cpp  5_6e.cpp  5_8.cpp  6_1.cpp  binary.cpp  bst.cpp  dimension.cpp  header.h  test.cpp  tmp  tree.cpp
mpi/: matrix_mult.c
multiproc/: main.cpp
mytemplate/: QuickSort.h
nihe_xp/: computeCost.m  computeCost2.m  gradientDescentMulti.m  gradientDescentMulti3.asv  gradientDescentMulti3.m  nihe_gradient_descent.asv  nihe_gradient_descent.m  (+1 more)
opencv/src/: CMakeLists.txt  detec_harris.cpp  test_convertTo.cpp  undistort_cam_K.cpp  video-write.cpp  video_read_write.cpp  yaml_reader.cpp
openni2_reorder/: CMakeLists.txt
openni2_reorder/Release/config/: config.ini  config.ini~
openni2_reorder/openni2_reorder_back/: CMakeLists.txt
openni2_reorder/openni2_reorder_back/src/: main_mopenni2.cpp  mopenni2.cpp  mopenni2.h  openni2_recorder.cpp
openni2_reorder/openni2_reorder_back/src/.svn/: all-wcprops  entries
openni2_reorder/openni2_reorder_back/src/.svn/text-base/: openni2_recorder.cpp.svn-base  setMode.cpp.svn-base
openni2_reorder/src/: client_main.cpp  main_mopenni2.cpp  mopenni2.cpp  mopenni2.h  server_data_dealer.cpp  server_data_dealer.h  server_main.cpp  socket_client.cpp  socket_client.h  socket_server.cpp  socket_server.h
plane-ZJU-online/: .cproject  .project  CMakeLists.txt
plane-ZJU-online/include/: plane_segmentation.h
plane-ZJU-online/src/: #plane_segmentation.cpp#  planeSeg_MAIN.cpp  planeSeg_MAIN.cpp~  plane_segmentation.cpp
qt4/intel_map/src/: #map2d.cpp#  #points.cpp#  CMakeLists.txt  gen_points.cpp  gen_points.cpp~  gen_points.h  graphics.cpp  graphics.h  imagemap.cpp  imagemap.h  line.cpp  main.cpp  main_window.cpp  main_window.h  map2d.cpp  map2d.h  point2d.cpp  points.cpp  points.h
qt4/intel_map/src/fast-slam/: Makefile  Makefile.depend  fast-slam  fastslam-result.rec  graphics-moc.cpp  main.cpp  tags
qt4/intel_map/src/mapper/: Makefile  Makefile.depend  gui-moc.cpp  gui.cpp  gui.h  mapview-moc.cpp  ml-mapper  tags
qt4/ui/src/: CMakeLists.txt  gen_points.h  main.cpp  mywindow.cpp  mywindow.h  points.cpp
robocane_control/robocane_control/: .robocane_control.cpp.swp  .test_robo_control.cpp.swp  CMakeLists.txt  HelloEposCmd.cpp  robocane_control.cpp  robocane_control.h  test_robo_control.cpp
stereo_match/: CMakeLists.txt
stereo_match/src/: test_stereo_match.cpp
testPcl/: CMakeLists.txt  pcl_visualizer_demo.cpp
testPcl/data/6678_2_Yes/: CameraTrajectory.txt  KeyFrameTrajectory.txt  MapPoints.txt
testPcl/data/6678_3_Yes/: CameraTrajectory.txt  KeyFrameTrajectory.txt  MapPoints.txt
tryg2o/: CMakeLists.txt  hello.cpp
tryg2o/cmake/: FindG2O.cmake
zhicp/: .ZHIcp_Warpper.cpp.swp  .ZHIcp_Warpper.h.swp  .test.cpp.swp  .testWarp.cpp.swp  .testfr079.cpp.swp  CMakeLists.txt  ZHIcp_Warpper.cpp  ZHIcp_Warpper.h  testWarp.cpp  testfr079.cpp
zhicp/.svn/: entries
zhicp/data/.svn/: entries
zhicp/data2/.svn/: entries
(+691 files in other folders)
