cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
project(RegionGrowing_Ransac)
set(PCL_DIR /home/davidz/work/3rdproject/pcl-1.7.0/build)
find_package(PCL 1.7 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(rigion_growing ./source/rigion_growing.cpp)
target_link_libraries(rigion_growing ${PCL_LIBRARIES})
