cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
project(RegionGrowing_Ransac)
find_package(PCL 1.2 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(rigion_growing rigion_growing.cpp)
target_link_libraries(rigion_growing ${PCL_LIBRARIES})
